src/gpu-pool/manifests/webhook-config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: gpu-pool-webhook
webhooks:
- name: gpu-pool.mrxrunway.ai
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiVENDQWxXZ0F3SUJBZ0lVSjBONG5idWtjRElPM0NiMTM5YVlQcXdreWY4d0RRWUpLb1pJaHZjTkFRRUwKQlFBd1JqRUxNQWtHQTFVRUJoTUNTMUl4RGpBTUJnTlZCQWdNQlZObGIzVnNNUkV3RHdZRFZRUUtEQWhIVUZVdApVRzl2YkRFVU1CSUdBMVVFQXd3TFozQjFMWEJ2YjJ3dFkyRXdIaGNOTWpVeE1ERTJNREl3T1RJM1doY05NelV4Ck1ERTBNREl3T1RJM1dqQkdNUXN3Q1FZRFZRUUdFd0pMVWpFT01Bd0dBMVVFQ0F3RlUyVnZkV3d4RVRBUEJnTlYKQkFvTUNFZFFWUzFRYjI5c01SUXdFZ1lEVlFRRERBdG5jSFV0Y0c5dmJDMWpZVENDQVNJd0RRWUpLb1pJaHZjTgpBUUVCQlFBRGdnRV [...]
    service:
      name: gpu-pool-webhook
      namespace: gpu-pool
      path: "/mutate"
  rules:
  - operations: ["CREATE"]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
  admissionReviewVersions: ["v1", "v1beta1"]
  sideEffects: None
  failurePolicy: Fail  # Webhook 실패 시에도 Pod 생성 허용
  namespaceSelector:
    matchExpressions:
    - key: name
      operator: NotIn
      values: ["kube-system", "gpu-pool"]  # 시스템 네임스페이스 제외
